--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 
 body {
-  width: 100%;
+  width: fit-content;
+  height: fit-content;
   margin-left: auto;
   margin-right: auto;
   background-color: #f0f0f0;
@@ -108,3 +109,6 @@ header {
   margin-top: 10%;
 }
 
+#portfolioLinks {
+  position: absolute;
+}
